<resources>
    <string name="app_name">AVTAR</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/yy</string>
    <string name="card_holders_name">Name</string>
    <string name="cvv">CVV</string>
    <string name="proceed">Proceed with Card</string>
    <string name="example_name">Vedhavyas</string>
    <string name="example_email">vedhavyas@instamojo.com</string>
    <string name="example_phone">9663556657</string>
    <string name="example_amount">10.00</string>
    <string name="test_description">Test description</string>
    <string name="pay">Pay</string>
    <string name="update_token">Update token</string>
    <string name="title_activity_avtar_rating">Map</string>
    <string name="title_activity_prediction_safety">Map</string>
</resources>
