<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.avtar.android.MainActivity">

    <include android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        layout="@layout/my_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

<!--            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Please fill out the details"
                android:textSize="26sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                />
                -->

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/env_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:spinnerMode="dialog" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Name"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:text="@string/example_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="Email Addresss"
                    android:inputType="textEmailAddress"
                    android:text="@string/example_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:hint="Mobile Number"
                    android:text="@string/example_phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="Payment Amount"
                android:inputType="numberDecimal"
                android:text="@string/example_amount" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="Description (Optional)"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:text="@string/test_description" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/pay"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/primary_color"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="Proceed to Pay" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
